Source/WebGPU/WGSL/tests/invalid/unicode.wgsl
// RUN: %not %wgslc | %check

// CHECK-L: Expected a ), but got a EOF
@group(5)@binding(xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx0߃